fix slider on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,8 @@ img.ui {
   -webkit-appearance: none;
   appearance: none;
   background: var(--accent-color);
-  height: .5em;
+  height: 1em;
+  width: 30em;
   border-radius: var(--border-r);
 }
 
@@ -557,10 +558,14 @@ img.ui {
   appearance: none;
   background: var(--white);
   border-radius: var(--border-r);
-  width: 25px;
-  height: 25px;
+  width: 4em;
+  height: 4em;
   box-shadow: 0px .3em 0px var(--accent-color),
               0px .2em 16px var(--bg);
+}
+
+.slider-container {
+  min-height: 3em;
 }
 
 .notif-slot {
